test/files/continuations-neg/t3718.scala
object Test {
  scala.util.continuations.reset((_: Any).##)
}
